--- a/.github/workflows/devdocs-mbot.yaml
+++ b/.github/workflows/devdocs-mbot.yaml
@@ -36,7 +36,7 @@ on:
         default: true
 jobs:
   devdocs:
-    name: pgn078-j1
+    name: pgn078-infra
     runs-on: ubuntu-latest
     env:
       GITHUB_PULL_REQUEST_SHA: ${{ github.event.pull_request.head.sha }}
